--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.8",
     "@types/react": "16.8.14",
+    "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.8",
     "@types/react-router-dom": "^4.3.2",
+    "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^4.1.14",
     "antd": "^3.16.6",
     "customize-cra": "^0.2.12",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "styled-components": "^4.2.0",
     "typescript": "3.4.5"
   },
