--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.11.0"
+    "@types/react-loadable": "^5.5.1",
+    "babel-plugin-import": "^1.11.0",
+    "react-loadable": "^5.5.0"
   }
 }
