--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.8",
+    "@types/prop-types": "^15.7.1",
     "@types/react": "16.8.14",
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "16.8.4",
@@ -14,7 +16,9 @@
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^4.1.14",
     "antd": "^3.16.6",
+    "axios": "^0.18.0",
     "customize-cra": "^0.2.12",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-document-title": "^2.0.3",
@@ -52,5 +56,6 @@
     "@types/react-loadable": "^5.5.1",
     "babel-plugin-import": "^1.11.0",
     "react-loadable": "^5.5.0"
-  }
+  },
+  "proxy": "http://zdbpf.free.idcfengye.com"
 }
